style.css
/* ... */
@media screen and (max-width: 1400px) {
    .main-why_me-central_image{
        display: none;
    }

    .header_navbar-content-bottom_list{
        flex-direction: column;
        margin-top: 80px;
        margin-left: 130px;
        padding: 0;
    }

    .header_navbar-right-email>div>img{
        display: none;
    }

    .header_navbar-item-left{
        margin-left: 100px;   
    }
    .header_navbar-content-bottom_list-item{
        margin-top: 20px;
    }
    .header_navbar-item-right{
        margin-right: 100px
    }
}

@media screen and (max-width: 1060px){
    .steps-step_1-content{
        width: 100%;
        height: 400px;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .steps-step_1{
        height: auto;
        display: flex;
        justify-content: center;
        flex-direction: column;
    }

    .steps-step_1-image{
        background-repeat: no-repeat;
        background-position: center;
        width: 100%;
        height: 441px;
    }
    
    .header_navbar-right-email{
        margin-right: 50px;
    }
    .header_content-main_button{
        margin: 0;
        margin-top: 10px;
    }
    .main-why_me-left_column-text-title{
        margin: 0;
    }

}

@media screen and (max-width: 930px){
    .header_content-main_title{
        width: 480px;
    }

    .header_navbar-item-right{
        display: none;
    }

    .header_content-main{
        flex-direction: column;
    }

    .header_content-main{
        padding: 0;
    }

    .header_navbar-content-bottom_video{
        display: none;
    }

    .main-why_me-text{
        flex-direction: column;
    }

    .main-why_me-text>div{
        width: auto;
        height: 340px;
    }

    .main-why_me-left_column-text{
        height: 300px;
    }

    .main-service__text-content{
        text-align: center;
    }
    .main-service__slider{
        padding: 0 20px;
    }
    .main-why_me-right_column-wrapper{
        margin-left: 0;
    }
    
}

@media screen and (max-width: 420px){
    .header_navbar-item-left{
        margin-left: 30px;
    }

    .header_navbar-left-logo{
        margin-left: 50px;
    }

    .header_content-main_title{
        width: auto;
        height: auto;
        padding-left: 10px;
    }

    .header_navbar-content-bottom_list{
        margin: 0;
        padding-left: 10px;
    }

    .main-why_me-left_column{
        height: 240px;
    }

    .main-why_me-left_column-text{
        margin: 0;
        top: auto;
        left: auto;
        transform: none;
        width: auto;
        padding-left: 5px;
    }

    .main-service__text{
        padding: 20px 0 ;
    }

    .main-service__slider{
        padding: 0;
    }
    
    .main-services{
        height: auto;
        padding: 20px 10px;
    }

    .steps-header_title{
        font-size: 40px;
    }

    .steps-header_text{
        width: 100%;
    }

    .steps-step_1-content{
        padding: 20px 5px;
        height: 300px;
    }

    .steps-step_1-content-head{
        margin: 0;
    }

    .steps-step_1-content-head_title{
        flex-direction: column;
        justify-content: center;
        width: 100%;
    }

    .steps-step_1-content-comment-image{
        display: none;
    }

    .steps-step_1-content-comment{
        width: 100%;
        margin: 10px 0;
    }

    .steps-step_1-content-head_text{
        width: 360px;
    }
}

